--- a/BaseArchitecture/BaseArchitecture.csproj
+++ b/BaseArchitecture/BaseArchitecture.csproj
@@ -6,10 +6,14 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="Services\" />
+    <Folder Include="DomainModel\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.4" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Npgsql" Version="3.2.7" />
   </ItemGroup>
 
   <ItemGroup>
