--- a/BaseArchitecture/appsettings.json
+++ b/BaseArchitecture/appsettings.json
@@ -11,5 +11,11 @@
         "Default": "Warning"
       }
     }
+  },
+  "AppSettings": {
+    "ConnectionStrings": {
+      "ConnectionString": "Server=localhost;Port=5432;User Id=postgres;Password=123456;Database=postgres;",
+      "DatabaseName": "PostgreSQL"
+    }
   }
 }
