添加service及日志功能

--- a/BaseArchitecture/Properties/launchSettings.json
+++ b/BaseArchitecture/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BaseArchitecture": {
+    "Architecture": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
