--- a/BaseArchitecture/WebAPI.csproj
+++ b/BaseArchitecture/WebAPI.csproj
@@ -5,9 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Repository\" />
     <Folder Include="wwwroot\" />
     <Folder Include="Services\" />
-    <Folder Include="DomainModel\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,10 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
