--- a/BaseArchitecture/appsettings.json
+++ b/BaseArchitecture/appsettings.json
@@ -3,13 +3,18 @@
     "IncludeScopes": false,
     "Debug": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Debug"
       }
     },
     "Console": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Debug"
       }
+    },
+    "EventLog": {
+      "LogLevel": {
+        "Defalut": "Debug" 
+      } 
     }
   },
   "AppSettings": {
