关注点分离
Signed-off-by: Jay <jaypan1988@gmail.com>

--- a/BaseArchitecture/WebAPI.csproj
+++ b/BaseArchitecture/WebAPI.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repository\" />
+    <Compile Remove="Repository\**" />
+    <Content Remove="Repository\**" />
+    <EmbeddedResource Remove="Repository\**" />
+    <None Remove="Repository\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Services\Implementation\" />
     <Folder Include="Services\Interface\" />
     <Folder Include="wwwroot\" />
