--- a/BaseArchitecture/appsettings.json
+++ b/BaseArchitecture/appsettings.json
@@ -20,7 +20,7 @@
   "AppSettings": {
     "ConnectionStrings": {
       "ConnectionString": "Server=localhost;Port=5432;User Id=postgres;Password=123456;Database=postgres;",
-      "DatabaseName": "PostgreSQL"
+      "DatabaseName": "MSSQLServer" //目前支持PostgreSQL、MSSQLServer
     }
   }
 }
