--- a/BaseArchitecture/appsettings.json
+++ b/BaseArchitecture/appsettings.json
@@ -19,7 +19,7 @@
   },
   "AppSettings": {
     "ConnectionStrings": {
-      "ConnectionString": "Server=localhost;Port=5432;User Id=postgres;Password=123456;Database=postgres;",
+      "ConnectionString": "Data Source=mssql.sql74.eznowdata.com;Initial Catalog=sq_ezgselltest2;User ID=sq_ezgselltest2;password=mcdbzj860522;",
       "DatabaseName": "MSSQLServer" //目前支持PostgreSQL、MSSQLServer
     }
   }
