--- a/BaseArchitecture/WebAPI.csproj
+++ b/BaseArchitecture/WebAPI.csproj
@@ -65,6 +65,8 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.4" />
+    <PackageReference Include="IdentityServer4" Version="2.1.3" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.1" />
     <PackageReference Include="Npgsql" Version="3.2.7" />
