--- a/BaseArchitecture/appsettings.json
+++ b/BaseArchitecture/appsettings.json
@@ -13,8 +13,8 @@
     },
     "EventLog": {
       "LogLevel": {
-        "Defalut": "Debug" 
-      } 
+        "Defalut": "Debug"
+      }
     }
   },
   "AppSettings": {
@@ -22,5 +22,13 @@
       "ConnectionString": "Data Source=mssql.sql74.eznowdata.com;Initial Catalog=sq_ezgselltest2;User ID=sq_ezgselltest2;password=mcdbzj860522;",
       "DatabaseName": "MSSQLServer" //目前支持PostgreSQL、MSSQLServer
     }
-  }
+  },
+  "Aliyun": {
+    "AppKey": "LTAIfUQHOnaiHjQm",
+    "AppSecret": "Qa8Wztt7p9PeKxRp4mpcIt7ZFe7DL0",
+    "ProductName": "Dysmsapi", //短信API产品名称
+    "Domain": "dysmsapi.aliyuncs.com", //短信API产品域名
+    "Host": "http://sms.market.alicloudapi.com",
+    "RegionIdForPop": "cn-hangzhou"
+  } 
 }
