--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -37,7 +37,9 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,6 +52,7 @@
     <Compile Include="DomainModel\RuleViolation.cs" />
     <Compile Include="DomainModel\ServiceResultBase.cs" />
     <Compile Include="Helper\ByteConvertHelper.cs" />
+    <Compile Include="Helper\ImageIdentifyCodeHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\DefaultDatabaseFactory.cs" />
     <Compile Include="Repository\IDatabaseFactory.cs" />
