--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -187,7 +187,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\GoodController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\CommonController.cs" />
     <Compile Include="Controllers\StudioHostController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Attribute\AuthorizationAttribute.cs" />
@@ -302,7 +302,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>45512</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
