--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dto\GoodDetailDto.cs" />
     <Compile Include="Dto\GoodStatistic.cs" />
     <Compile Include="Dto\RegisterDto.cs" />
     <Compile Include="Entities\Good.cs" />
