增加订单接口

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--<add name="YYPConnection" connectionString="Data Source=mssql.sql74.eznowdata.com;Initial Catalog=sq_ezgselltest2;User ID=sq_ezgselltest2;password=mcdbzj860522;" providerName="System.Data.SqlClient" />-->
-    <add name="YYPConnection" connectionString="Data Source=bds246464387.my3w.com;Initial Catalog=bds246464387_db;User ID=bds246464387;password=yypdbzj860522;"/>
+    <add name="YYPConnection" connectionString="Data Source=mssql.sql74.eznowdata.com;Initial Catalog=sq_ezgselltest2;User ID=sq_ezgselltest2;password=mcdbzj860522;" providerName="System.Data.SqlClient" />
+    <!--<add name="YYPConnection" connectionString="Data Source=bds246464387.my3w.com;Initial Catalog=bds246464387_db;User ID=bds246464387;password=yypdbzj860522;"/>-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
