--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\GoodController.cs" />
     <Compile Include="Controllers\CommonController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\StudioHostController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Attribute\AuthorizationAttribute.cs" />
