--- a/youyangpin/package.json
+++ b/youyangpin/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "clipboard": "^2.0.1",
     "element-ui": "^2.3.3",
     "es6-promise": "^4.1.0",
     "fetch-jsonp": "^1.1.1",
